scss/common/_reply.scss
#reply-control {
  background-color: color-chooser($dropdown-bg-dark, $dropdown-bg-light);
  box-shadow: $dropdown-box-shadow;
  display: flex;
  flex-direction: column;
  max-width: $container-max-width;
  right: 0;

  @media (min-width: ($container-max-width + 1)) {
    border-radius: ($dropdown-border-radius * 2) ($dropdown-border-radius * 2) 0 0;
    right: 1px;
  }

  @media (min-width: ($container-max-width + $spacer-lg * 2)) {
    right: $spacer-lg;
  }

  &.draft {
    border-top: 0;
    height: auto !important;
    text-align: center;

    .draft-text {
      padding: $btn-padding-y $btn-padding-x;

      @include hover {
        background-color: color-chooser($btn-bg-hover-dark, $btn-bg-hover-light);
      }

      &:active {
        background-color: color-chooser($btn-bg-active-dark, $btn-bg-active-light);
      }
    }

    .span24 {
      display: block;
      float: none;
      width: auto;
    }

    .toggler {
      color: color-chooser($white-secondary, $black-secondary);
      height: $material-icon-size;
      margin-top: ($material-icon-size / -2);
      top: 50%;
      width: $material-icon-size;

      &::before {
        @extend %material-icons;

        content: 'close';
      }
    }
  }

  &.edit-title {
    .contents {
      input {
        &#reply-title {
          border: 0;
          height: auto;
          margin: 0;
          padding: $card-padding-y $card-padding-x;

          @include focus-hover {
            padding-bottom: $card-padding-y;
          }
        }
      }
    }
  }

  &.open .grippie {
    display: flex;
    flex-shrink: 0;
  }

  .add-warning {
    margin-right: $card-padding-x;
    margin-left: 0;
    position: static;
    width: auto;

    input[type='checkbox'] {
      margin-right: $spacer-xs;
    }

    label {
      margin-bottom: 0;
    }
  }

  .category-input {
    padding-right: $card-padding-x;
    padding-left: $card-padding-x;
  }

  .composer-fields {
    align-items: center;
    display: flex;
    flex-shrink: 0;
    flex-wrap: wrap;
  }

  .contents {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    min-width: $container-max-width;
    padding: 0;

    .control {
      display: flex;
      flex-direction: column;
      flex-grow: 1;
    }

    .form-element {
      align-items: center;
      border-bottom: 1px solid color-chooser($white-divider, $black-divider);
      display: flex;
      flex-grow: 1;

      .select2-container {
        margin: 0;
        text-align: right;

        a {
          height: $btn-height;
          padding-top: $btn-padding-y;
        }

        b {
          margin-top: 0;
        }
      }
    }

    #reply-title {
      margin: 0;

      &:focus {
        outline: 0;
      }
    }

    .submit-panel {
      align-items: center;
      border-top: 1px solid color-chooser($white-divider, $black-divider);
      display: flex;
      flex-shrink: 0;
      padding: $card-inner-spacer-y $card-padding-x $card-padding-y;
      position: static;
      width: auto;

      .btn {
        @extend %btn-raised;
      }

      .cancel {
        @extend %btn-flat-simple;

        margin-left: $card-inner-spacer-x;
      }
    }
  }

  .control-row {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    margin: 0;

    &.reply-area {
      padding: 0;
    }
  }

  .d-editor {
    display: flex;
  }

  .d-editor-button-bar {
    background-color: transparent;
    border: 0;
    color: color-chooser($white-secondary, $black-secondary);
    height: auto;
    padding: ($card-inner-spacer-y / 2) ($card-inner-spacer-x / 2);

    button,
    .btn {
      body & {
        color: color-chooser($white-secondary, $black-secondary);

        @include focus-hover {
          color: color-chooser($white-secondary, $black-secondary);
        }
      }
    }

    .btn.heading {
      font-family: inherit;
      font-weight: $btn-font-weight;
    }
  }

  .d-editor-container {
    background-color: transparent;
    border-radius: 0;
  }

  .d-editor-preview {
    border-radius: 0;
  }

  #draft-status {
    background-color: transparent;
    color: unquote('$tertiary');
    font-size: $font-size-small;
    margin-right: $spacer-sm;
    margin-bottom: $spacer-sm;
    right: 50%;
    bottom: ($btn-height + $card-inner-spacer-y + $card-padding-y);

    &:empty {
      display: none;
    }
  }

  .grippie {
    align-items: center;
    background-color: color-chooser($dropdown-bg-light, $dropdown-bg-dark);
    color: color-chooser($black-secondary, $white-secondary);
    flex-shrink: 0;
    height: ($material-icon-size + $spacer-sm);
    justify-content: center;
    padding: 0;

    @media (min-width: ($container-max-width + 1)) {
      border-radius: $dropdown-border-radius $dropdown-border-radius 0 0;
    }

    &::before {
      @extend %material-icons;

      border: 0;
      content: 'drag_handle';
    }
  }

  .hide-preview {
    #draft-status {
      right: 0;
    }

    .toggle-preview::before {
      content: 'keyboard_arrow_left';
    }
  }

  .popup-menu {
    @extend %dropdown-menu-sm;

    h3 {
      @extend %dropdown-header-sm;
    }

    .btn {
      @extend %dropdown-link-sm;
    }
  }

  .reply-area {
    margin: 0;
    max-width: none;

    .ac-wrap {
      margin-right: $card-padding-x;
    }
  }

  .reply-to {
    align-items: center;
    color: color-chooser($black-secondary, $white-secondary);
    display: flex;
    height: ($material-icon-size + $spacer-sm);
    margin: 0;
    max-width: none;
    position: absolute;
    top: 0;
    left: $spacer-sm;

    a {
      color: color-chooser($black-secondary, $white-secondary);
    }

    .avatar {
      margin-right: $spacer-xs;
      margin-left: $spacer-xs;
    }
  }

  .title-input {
    flex-grow: 1;
    order: -1;
  }

  .toggle-preview {
    @extend %btn-flat;

    margin: 0;
    position: absolute;
    right: $card-padding-x;
    bottom: $card-padding-y;
    text-indent: 100%;
    width: ($btn-padding-x * 2 + $material-icon-size);

    &::before {
      @extend %material-icons;

      align-items: center;
      content: 'keyboard_arrow_right';
      display: flex;
      justify-content: center;
      position: absolute;
      top: 0;
      right: 0;
      bottom: 0;
      left: 0;
      text-indent: 0;
    }
  }

  .toggle-toolbar,
  .toggler {
    align-items: center;
    color: color-chooser($black-secondary, $white-secondary);
    display: flex;
    font-size: inherit;
    height: ($material-icon-size + $spacer-sm);
    justify-content: center;
    padding: 0;
    top: 0;
    width: ($material-icon-size + $spacer-sm);
  }

  .toggle-toolbar {
    @include material-icons('menu');

    right: ($material-icon-size + $spacer-sm + $spacer-sm * 2);
  }

  .toggler {
    right: $spacer-sm;

    &::before {
      @extend %material-icons;

      content: 'close';
    }

    .fa {
      display: none;
    }
  }

  .wmd-controls {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    max-width: 100%;
    position: static;

    .d-editor,
    .d-editor-container {
      flex-grow: 1;
      height: auto;
      min-height: 0;
    }

    .d-editor-container {
      display: flex;
    }

    .d-editor-input,
    .d-editor-preview,
    .d-editor-preview-header {
      background-color: transparent;
    }

    .d-editor-input,
    .d-editor-preview-header {
      border-top-width: ($btn-height-sm + $card-inner-spacer-y);
    }

    .d-editor-input {
      border-top-color: transparent;
      padding: 0 $card-padding-x $card-padding-y;
      position: static;
    }

    .d-editor-preview {
      border: 0;
      border-left: 1px solid color-chooser($white-divider, $black-divider);
      padding: $card-padding-y $card-padding-x;

      img:not(.thumbnail) {
        height: auto;
        width: 100%;
      }
    }

    .d-editor-preview-wrapper {
      height: auto;
      padding-left: 0;
      position: static;
    }

    .d-editor-textarea-wrapper {
      height: auto;
      padding-right: 0;
      position: static;
    }
  }
}

